// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`htmlRewriters > FragmentTemplatesAppender > fulfilled fragmentIdsMap 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>dummy page title</title>
  <template id=\\"eyJlbnRyeSI6ImYxOi9jb21wb25lbnQxIiwiZ2F0ZXdheSI6Imh0dHBzOi8vZ3cxLmNvbSJ9\\" class=\\"react-portable-gateway-cache\\" ><rp-fragment>this is component1</rp-fragment></template><template id=\\"eyJlbnRyeSI6ImYyOi9jb21wb25lbnQyIiwiZ2F0ZXdheSI6bnVsbH0=\\" class=\\"react-portable-gateway-cache\\" ><rp-fragment>this is component2</rp-fragment></template><template id=\\"eyJlbnRyeSI6ImYzOi9jb21wb25lbnQzIiwiZ2F0ZXdheSI6bnVsbH0=\\" class=\\"react-portable-gateway-cache\\" ><rp-fragment>this is component3</rp-fragment></template></head>
  <body>
    <h1>dummy page</h1>
    <react-portable entry=\\"f1:/component1\\" gateway=\\"https://gw1.com\\"></react-portable>
    <react-portable entry=\\"f2:/component2\\"></react-portable>
    <react-portable entry=\\"f3:/component3\\">has inner text</react-portable>
    <react-portable>this is bad component (no entry attribute)</react-portable>
    <react-portablee entry=\\"f3:/component3\\">this is bad component (typo)</react-portablee>
    <react-portable entry=\\"f4:/component4\\">this is bad component (response status is 404)</react-portable>
  </body>
</html>
"
`;

exports[`htmlRewriters > ReactPortablePiercer > fulfilled fragmentIdsMap 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>dummy page title</title>
  </head>
  <body>
    <h1>dummy page</h1>
    <react-portable entry=\\"f1:/component1\\" gateway=\\"https://gw1.com\\" pierced=\\"succeed\\"><rp-fragment>this is component1</rp-fragment></react-portable>
    <react-portable entry=\\"f2:/component2\\" pierced=\\"succeed\\"><rp-fragment>this is component2</rp-fragment></react-portable>
    <react-portable entry=\\"f3:/component3\\" pierced=\\"succeed\\"><rp-fragment>this is component3</rp-fragment></react-portable>
    <react-portable>this is bad component (no entry attribute)</react-portable>
    <react-portablee entry=\\"f3:/component3\\">this is bad component (typo)</react-portablee>
    <react-portable entry=\\"f4:/component4\\" pierced=\\"failed\\">this is bad component (response status is 404)</react-portable>
  </body>
</html>
"
`;
